--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -26,7 +26,7 @@
         <div class="qrcode">
             <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIG." aria-describedby="basic-addon2">
         </div>
-        <div id="appendSelect"></div>
+        <div id="appendSelect"><select onchange='updateInputValue()' style='display: none;' onclick='timerOn = false' id='selectMagazzinoDest' onfocusout='timerOn = true' class='form-control'><option value='-1'> Seleziona magazzino destinazione </option></select></div>
         <div id="appendData"></div>
 
         <div class="btnDiv">
@@ -34,7 +34,7 @@
                 <button onclick="cambioMagazzinoUbicazione()" type="button" id="btnCambio" class="btn btnOsai" disabled="diableBtn">Conferma</button>
             </div>
             <div style="float: left;width: 50%;">
-                <button onclick="window.location.reload()" type="button" class="btn btnOsai"> Annulla </button>
+                <button onclick="annulla()" type="button" class="btn btnOsai"> Annulla </button>
             </div>
         </div>
         <div id="error_message"></div>
