--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -26,7 +26,7 @@
         <div class="qrcode">
             <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIG." aria-describedby="basic-addon2">
         </div>
-        <div id="appendSelect"><select onchange='updateInputValue()' style='display: none;' onclick='timerOn = false' id='selectMagazzinoDest' onfocusout='timerOn = true' class='form-control'><option value='-1'> Seleziona magazzino destinazione </option></select></div>
+        <div id="appendSelect"></div>
         <div id="appendData"></div>
 
         <div class="btnDiv">
