--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="row">
                 <div class="column disabledMenuItem"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
-                <div class="column disabledMenuItem"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note <br> e posizione</p></div>
+                <div class="column" onclick="window.location='./gestione-note.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note <br> e posizione</p></div>
             </div>
             <!-- <div class="row">
                 <div class="column"><i class="fa-solid fa-3x fa-arrow-right-from-bracket"></i><p> Logout </p></div>
