--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -24,7 +24,7 @@
         <h3 class="titleOsai"> Cambio Magazzino Ubicazione</h3>
 
         <div class="qrcode">
-            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIG." aria-describedby="basic-addon2">
+            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ORIGINE" aria-describedby="basic-addon2">
         </div>
         <div id="appendSelect"></div>
         <div id="appendData"></div>
