--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row">
                 <div class="column" onclick="window.location='./trasferimento-articoli.html'"><i class="fa-solid fa-3x fa-arrow-right-arrow-left"></i><p> Trasferimento <br> Articoli</p></div>
-                <div class="column disabledMenuItem"><i class="fa-solid fa-3x fa-trash-can-arrow-up"></i><p> Svuota <br> Ubicazione </p></div>
+                <div class="column" onclick="window.location='./svuota-ubicazione.html'"><i class="fa-solid fa-3x fa-trash-can-arrow-up"></i><p> Svuota <br> Ubicazione </p></div>
             </div>
             <div class="row">
                 <div class="column disabledMenuItem"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
