--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="column" onclick="window.location='./svuota-ubicazione.html'"><i class="fa-solid fa-3x fa-trash-can-arrow-up"></i><p> Svuota <br> Ubicazione </p></div>
             </div>
             <div class="row">
-                <div class="column disabledMenuItem"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
+                <div class="column" onclick="window.location='./gestione-carrelli.html'"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
                 <div class="column" onclick="window.location='./gestione-note.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note <br> e posizione</p></div>
             </div>
             <!-- <div class="row">
