--- a/gestione-carrelli.html
+++ b/gestione-carrelli.html
@@ -27,10 +27,11 @@
         </div>
         
         <div class="listaOsai"></div>
+        <div id="appendData"></div>
         <div id="error_message"></div>
-        <div class="bottoniStep1">
+        <div id="bottoniStep1">
             <button onclick="associa()" type="button" style="display:none;" class="btn btnOsai btnCarrello"> Associazione da carrello </button>
-            <button onclick="disassiocia()" type="button" style="display:none;" class="btn btnOsai btnCarrello"> Disassociazione da carrello </button>
+            <button onclick="disassocia()" type="button" style="display:none;" class="btn btnOsai btnCarrello"> Disassociazione da carrello </button>
             <button onclick="trasferisciCarrello()" type="button" style="display:none;" class="btn btnOsai btnCarrello"> Trasf. carrello a nuovo mag. </button>
         </div>
         <div class="bottoniStep2" style="display:none;">
