--- a/gestione-carrelli.html
+++ b/gestione-carrelli.html
@@ -23,7 +23,7 @@
         <h3 class="titleOsai">Gestione Carrelli</h3>
         <div class="qrcode">
             <input type="text" class="form-control focus" id="qrcode" placeholder="CODICE CARRELLO" aria-describedby="basic-addon2">
-            <input type="text" class="form-control focus" disabled id="qrcode_ubi" style="display:none" placeholder="CODICE UBICAZIONE" aria-describedby="basic-addon2">
+            <!--<input type="text" class="form-control focus" disabled id="qrcode_ubi" style="display:none" placeholder="CODICE UBICAZIONE" aria-describedby="basic-addon2">-->
         </div>
         <div id="codCarrello"></div>
         <div id="appendSelect"></div>
