--- a/gestione-note.html
+++ b/gestione-note.html
@@ -22,7 +22,7 @@
         </div> -->
         <h3 class="titleOsai">Gestione Note e Posizione</h3>
         <div class="qrcode">
-            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE (PL-0001)" aria-describedby="basic-addon2">
+            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE " aria-describedby="basic-addon2">
         </div>
         <div class="listaOsai"></div>
         <div id="error_message"></div>
