--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -22,7 +22,7 @@
         </div> -->
         <h3 class="titleOsai">Interrogazione Ubicazione</h3>
         <div class="qrcode">
-            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE (PL-0001)" aria-describedby="basic-addon2">
+            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE " aria-describedby="basic-addon2">
         </div>
         <button onclick="ripetiInterrogazione()" type="button" id="btnInterroga" class="btn btnOsai"> Interroga altro </button>
         <div class="listaOsai"></div>
