--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="assets/css/all.css">
         <link rel="stylesheet" href="assets/css/fontawesome.css">
         <link rel="stylesheet" href="assets/css/v4-font-face.css">
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     </head>
     <body>
         <nav class="navbar blue">
