--- a/richieste-movimentazione.html
+++ b/richieste-movimentazione.html
@@ -34,7 +34,10 @@
         </div>
         <div class="btnDiv">
             <div style="float: left;width: 50%;">
-                <button onclick="conferma(false)" type="button" id="btnConfirm" class="btn btnOsai" disabled="true"> Conferma </button>
+                <button onclick="conferma()" type="button" id="btnConfirm" class="btn btnOsai" disabled="true"> Conferma </button>
+            </div>
+            <div style="float: left;width: 50%;">
+                <button onclick="preleva()" type="button" id="btnPreleva" class="btn btnOsai" disabled="true"> Preleva </button>
             </div>
             <div style="float: left;width: 50%;">
                 <button onclick="indietro()" type="button" id="btnBack" class="btn btnOsai"> Indietro </button>
