Migliorie funzioni esistenti

--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -17,6 +17,8 @@
             <p class="navTitle">Torna al menù</p>
             <button class="btn btn-outline-light btnLogout" onclick="logout()" type="button"><i class="fa-solid fa-arrow-right-from-bracket logout"> </i> </button>
         </nav>
+        
+        <script src="assets/js/find5.js"></script>
         <!-- <div class="interrogaUbiOsai blue" onclick="window.location='./index.html'">
             <div><p>Torna al Menu</p></div>
         </div> -->
