--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -54,5 +54,6 @@
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="assets/js/trasferimentoArticoli.js?v=6"></script>  
+        <script src="assets/js/whitelist.js?v=1"></script>  
     </body>
 </html>
