--- a/richieste-movimentazione.html
+++ b/richieste-movimentazione.html
@@ -18,7 +18,8 @@
         </nav>
         <h3 class="titleOsai">Richieste movimentazione</h3>
 
-        <div id="divElencoDocumentiContainer">
+        <div id="divElencoDocumentiContainer" style="margin-top:30px;">
+            <hr/>
             <div id="divElencoDocumenti"></div>
             <div id="loading"><!-- Used by infinite scroll--></div>
         </div>
@@ -30,14 +31,14 @@
             <div id="divSingolaRiga"></div>
         </div>
         <div class="btnDiv">
-            <div style="float: left;width: 50%;">
-                <button onclick="conferma()" type="button" id="btnConfirm" class="btn btnOsai" disabled="true"> Conferma </button>
+            <div style="float: left;width: 100%;border-top: 1px solid rgba(0,0,0,.1);padding: 30px 0px;" id="btnConfirm">
+                <button onclick="conferma()" type="button"  class="btn btnOsai" disabled="true"> Conferma </button>
             </div>
-            <div style="float: left;width: 50%;">
-                <button onclick="preleva()" type="button" id="btnPreleva" class="btn btnOsai" disabled="true"> Preleva </button>
+            <div style="float: left;width: 100%;border-top: 1px solid rgba(0,0,0,.1);padding: 30px 0px;" id="btnPreleva">
+                <button onclick="preleva()" type="button"  class="btn btnOsai" disabled="true"> Preleva </button>
             </div>
-            <div style="float: left;width: 50%;">
-                <button onclick="indietro()" type="button" id="btnBack" class="btn btnOsai"> Indietro </button>
+            <div style="float: left;width: 100%;border-top: 1px solid rgba(0,0,0,.1);padding: 30px 0px;" id="btnBack">
+                <button onclick="indietro()" type="button"  class="btn btnOsai"> Indietro </button>
             </div>
         </div>
         <div id="error_message"></div>
