scommento voce menu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
               <button class="btn btn-outline-light btnLogout" onclick="logout()" type="button"><i class="fa-solid fa-arrow-right-from-bracket logout"> </i> </button>
           </nav>
 
-        <!-- <div class="interrogaUbiOsai blue">
+        <!--
+        <div class="interrogaUbiOsai blue">
             <div><p>OSAI </p> </div><div><i class="fa-solid fa-arrow-right-from-bracket logout"></i></div>
-        </div> -->
+        </div>
+        -->
         <div class="container">
             <div class="row">
                 <div class="column" onclick="window.location='./interrogazione-ubicazione.html'"><i class="fa-solid fa-3x fa-clipboard-question"></i><p> Interrogazione <br> Ubicazione</p></div>
@@ -35,12 +37,14 @@
                 <div class="column" onclick="window.location='./gestione-carrelli.html'"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
                 <div class="column" onclick="window.location='./gestione-note.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note <br> e posizione</p></div>
             </div>
-            <!--<div class="row">
+            <div class="row">
                 <div class="column" onclick="window.location='./richieste-movimentazione.html'"><i class="fa-solid fa-3x fa-archive"></i><p> Richieste<br>  movimentazione</p></div>
-            </div>-->
-            <!-- <div class="row">
-                <div class="column"><i class="fa-solid fa-3x fa-arrow-right-from-bracket"></i><p> Logout </p></div>
-            </div> -->
+            </div>
+            <!-- 
+                <div class="row">
+                    <div class="column"><i class="fa-solid fa-3x fa-arrow-right-from-bracket"></i><p> Logout </p></div>
+                </div> 
+            -->
         </div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
