fix tranche3 Interrogazione

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 <div class="column" onclick="window.location='./gestione-carrelli.html'"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
                 <div class="column" onclick="window.location='./gestione-note.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Gestione note <br> e posizione</p></div>
             </div>
-            <!--<div class="row">
+            <div class="row">
                 <div class="column" onclick="window.location='./richieste-movimentazione.html'"><i class="fa-solid fa-3x fa-archive"></i><p> Richieste<br>  movimentazione</p></div>
-            </div>-->
+                <div class="column" onclick="window.location='./interrogazione-articolo.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Interrogazione <br> Articolo</p></div>
+            </div>
             <!-- <div class="row">
                 <div class="column"><i class="fa-solid fa-3x fa-arrow-right-from-bracket"></i><p> Logout </p></div>
             </div> -->
