--- a/interrogazione-articolo.html
+++ b/interrogazione-articolo.html
@@ -27,7 +27,7 @@
             <input type="text" class="form-control focus" id="qrcode" placeholder="ARTICOLO " aria-describedby="basic-addon2">
         </div>
         <select class='form-control' id="selectCommessa">
-            <option>Seleziona una commessa</option>
+            <option value="">Seleziona una commessa</option>
             <option value="all">Tutte</option>
             <option value="mg">Solo MG</option>
             <option value="notmg">Diverse da MG</option>
