fix bottoni disabilitati

--- a/trasferisci-contenuto.html
+++ b/trasferisci-contenuto.html
@@ -29,7 +29,7 @@
                 <button onclick="trasferisciContenuto()" type="button" id="btnTrasferimento" class="btn btnOsai" disabled="true"> Conferma </button>
             </div>
             <div style="float: left;width: 50%;">
-                <button onclick="window.location.reload()" type="button" id="btnAnnulla" class="btn btnOsai"> Annulla </button>
+                <button onclick="cancel()" type="button" id="btnAnnulla" class="btn btnOsai"> Annulla </button>
             </div>
         </div>
         <div id="error_message"></div>
