--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="column" onclick="window.location='./interrogazione-articolo.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Interrogazione <br> Articolo</p></div>
             </div>
             <div class="row">
-                <div class="column" onclick="window.location='./trasferisci-contenuto.html'"><i class="fa-solid fa-3x fa-arrow-right-arrow-left"></i><p> Trasferisci <br> Contenuto </p></div>
+                <div class="column" onclick="window.location='./trasferimento-contenuto.html'"><i class="fa-solid fa-3x fa-arrow-right-arrow-left"></i><p> Trasferisci <br> Contenuto </p></div>
             </div>
             <!-- <div class="row">
                 <div class="column"><i class="fa-solid fa-3x fa-arrow-right-from-bracket"></i><p> Logout </p></div>
