--- a/richieste-movimentazione.html
+++ b/richieste-movimentazione.html
@@ -17,7 +17,9 @@
             <button class="btn btn-outline-light btnLogout" onclick="logout()" type="button"><i class="fa-solid fa-arrow-right-from-bracket logout"> </i> </button>
         </nav>
         <h3 class="titleOsai">Richieste movimentazione</h3>
-
+        <div class="qrcode" style="display:none">
+            <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE ARRIVO" aria-describedby="basic-addon2">
+        </div>
         <div id="divElencoDocumentiContainer" style="margin-top:30px;">
             <div id="divElencoDocumenti"></div>
             <div id="loading"><!-- Used by infinite scroll--></div>
