--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -18,7 +18,7 @@
             <button class="btn btn-outline-light btnLogout" onclick="logout()" type="button"><i class="fa-solid fa-arrow-right-from-bracket logout"> </i> </button>
         </nav>
         
-        <!--<script src="assets/js/find5.js"></script>-->
+        <script src="assets/js/find5.js"></script>
         <!-- <div class="interrogaUbiOsai blue" onclick="window.location='./index.html'">
             <div><p>Torna al Menu</p></div>
         </div> -->
