show alert succes, 1 sec timeout

--- a/cambio-magazzino-ubicazione.html
+++ b/cambio-magazzino-ubicazione.html
@@ -37,7 +37,8 @@
                 <button onclick="annulla()" type="button" class="btn btnOsai"> Annulla </button>
             </div>
         </div>
-        <div id="error_message"></div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
+        <!-- <div id="error_message"></div> -->
         <div id="magazzinoDest"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
