--- a/gestione-carrelli.html
+++ b/gestione-carrelli.html
@@ -47,6 +47,8 @@
                 </div>
             </div>
         </div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
+
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
             $(document).ready(function(){
