--- a/trasferimento-contenuto.html
+++ b/trasferimento-contenuto.html
@@ -32,7 +32,9 @@
                 <button onclick="cancel()" type="button" id="btnAnnulla" class="btn btnOsai"> Annulla </button>
             </div>
         </div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
         <div id="error_message"></div>
+        
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
             $(document).ready(function(){
