--- a/richieste-movimentazione.html
+++ b/richieste-movimentazione.html
@@ -74,7 +74,8 @@
                 <a class="btn btn_setting" href="javascript:void(0);" data-open="false"><i class="fa-solid fa-gear"></i></a>
             </div>
         </div>
-        
+        <div id="boxqnt" style="text-align:center">
+        </div>
         <div id="divElencoDocumentiContainer" style="margin-top:30px;">
             <div id="divElencoDocumenti"></div>
             <div id="loading"><!-- Used by infinite scroll--></div>
