--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div class="container">
             <div class="row">
                 <div class="column" onclick="window.location='./interrogazione-ubicazione.html'"><i class="fa-solid fa-3x fa-clipboard-question"></i><p> Interrogazione <br> Ubicazione</p></div>
-                <div class="column" onclick="window.location='./cambio-magazzino-ubicazione.html'"><i class="fa-solid fa-3x fa-truck-moving"></i><p> Cambio Magazzino <br> Ubicazione</p></div>
+                <div class="column" onclick="window.location='./interrogazione-articolo.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Interrogazione <br> Articolo</p></div>
             </div>
             <div class="row">
                 <div class="column" onclick="window.location='./trasferimento-articoli.html'"><i class="fa-solid fa-3x fa-arrow-right-arrow-left"></i><p> Trasferimento <br> Articoli</p></div>
-                <div class="column" onclick="window.location='./svuota-ubicazione.html'"><i class="fa-solid fa-3x fa-trash-can-arrow-up"></i><p> Svuota <br> Ubicazione </p></div>
+                <div class="column" onclick="window.location='./trasferisci-contenuto.html'"><i class="fa-solid fa-3x fa-arrow-right-arrow-left"></i><p> Trasferisci<br>  contenuto</p></div>
             </div>
             <div class="row">
                 <div class="column" onclick="window.location='./gestione-carrelli.html'"><i class="fa-solid fa-3x fa-cart-flatbed"></i><p> Gestione <br> Carrelli </p></div>
@@ -33,7 +33,10 @@
             </div>
             <div class="row">
                 <div class="column" onclick="window.location='./richieste-movimentazione.html'"><i class="fa-solid fa-3x fa-archive"></i><p> Richieste<br>  movimentazione</p></div>
-                <div class="column" onclick="window.location='./interrogazione-articolo.html'"><i class="fa-solid fa-3x fa-magnifying-glass-location"></i><p> Interrogazione <br> Articolo</p></div>
+                <div class="column" onclick="window.location='./cambio-magazzino-ubicazione.html'"><i class="fa-solid fa-3x fa-truck-moving"></i><p> Cambio Magazzino <br> Ubicazione</p></div>
+            </div>
+			<div class="row">
+                <div class="column" onclick="window.location='./svuota-ubicazione.html'"><i class="fa-solid fa-3x fa-trash-can-arrow-up"></i><p> Svuota <br> Ubicazione </p></div>                
             </div>
         </div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
