--- a/interrogazione-ubicazione.html
+++ b/interrogazione-ubicazione.html
@@ -28,6 +28,7 @@
         </div>
         <button onclick="ripetiInterrogazione()" type="button" id="btnInterroga" class="btn btnOsai"> Interroga altro </button>
         <div class="listaOsai"></div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
