--- a/richieste-movimentazione.html
+++ b/richieste-movimentazione.html
@@ -125,6 +125,7 @@
                 <button onclick="indietro()" type="button"  class="btn btnOsai"> Annulla </button>
             </div>
         </div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
         <div id="error_message"></div>
         
         <script src="assets/js/jquery-3.6.0.min.js"></script>
