--- a/trasferimento-articoli.html
+++ b/trasferimento-articoli.html
@@ -38,6 +38,7 @@
                 <button onclick="trasferimentoArticoli(true)" type="button" id="btnRipeti" class="btn btnOsai" disabled="true"> Conferma e Ripeti </button>
             </div>
         </div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
