--- a/gestione-carrelli.html
+++ b/gestione-carrelli.html
@@ -29,6 +29,7 @@
         <div id="appendSelect"></div>
         <div class="listaOsai"></div>
         <div id="appendData"></div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
         <div id="error_message"></div>
         <div id="bottoniStep1" style="margin-bottom:30px;float:left;">
             <button onclick="associa()" type="button" style="display:none;float:left;margin-left:15px;margin-bottom:15px;" class="btn btnOsai btnCarrello"> Associa</button>
