--- a/gestione-note.html
+++ b/gestione-note.html
@@ -25,6 +25,7 @@
             <input type="text" class="form-control focus" id="qrcode" placeholder="UBICAZIONE " aria-describedby="basic-addon2">
         </div>
         <div class="listaOsai"></div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
