--- a/trasferisci-contenuto.html
+++ b/trasferisci-contenuto.html
@@ -31,6 +31,7 @@
                 <button onclick="window.location.reload()" type="button" id="btnAnnulla" class="btn btnOsai"> Annulla </button>
             </div>
         </div>
+        <div id="success_message" class="alert alert-success" role="alert"></div>
         <div id="error_message"></div>
         <script src="assets/js/jquery-3.6.0.min.js"></script>
         <script>
